src/main/kotlin/com/github/xepozz/gitcodeowners/language/parser/Codeowners.bnf
{
  parserClass="com.github.xepozz.gitcodeowners.language.parser.CodeownersParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Codeowners"
  psiImplClassSuffix="Impl"
  psiPackage="com.github.xepozz.gitcodeowners.language.psi"
  psiImplPackage="com.github.xepozz.gitcodeowners.language.psi.impl"

  elementTypeHolderClass="com.github.xepozz.gitcodeowners.language.psi.CodeownersTypes"
  elementTypeClass="com.github.xepozz.gitcodeowners.language.psi.CodeownersElementType"
  tokenTypeClass="com.github.xepozz.gitcodeowners.language.psi.CodeownersTokenType"

//  psiImplUtilClass="com.github.xepozz.gitcodeowners.language.psi.impl.CodeownersImplUtil"
}

file ::= item_*

private item_ ::= (definition | COMMENT | EOL)

definition ::= pattern team+
{
    pin=1
}
pattern ::= TEXT
{
    implements=["com.intellij.psi.NavigatablePsiElement"]
    extends="com.github.xepozz.gitcodeowners.language.psi.impl.CodeownersPatternBaseImpl"
}
team ::= TEXT
{
    implements=["com.intellij.psi.NavigatablePsiElement"]
    extends="com.github.xepozz.gitcodeowners.language.psi.impl.CodeownersTeamBaseImpl"
}

COMMENT ::= SINGLE_COMMENT
